--- a/配置文件备份/Theme配置文件/_config.yml
+++ b/配置文件备份/Theme配置文件/_config.yml
@@ -18,8 +18,8 @@ menu:
     directory: archives/
   - page: about
     directory: about/
-  - page: 留言
-    directory: leavemsg/
+  - page: guestbook
+    directory: guestbook/
   - page: rss
     directory: atom.xml
 
