--- a/配置文件备份/Hexo配置文件/_config.yml
+++ b/配置文件备份/Hexo配置文件/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: sevennight
 subtitle: 技术笔记
-description: 欢迎来到sevennight的个人网站,这里记录了我的生活,我的灵感,我的技术。这里有我在互联网里遇到的学到的各种知识,资源的分享
+description: sevennight's blog，关于Java、架构、前端、互联网技术等。
 author: sevennight
 language: zh-CN
 timezone: 
